@@ -23,6 +23,8 @@
 		- Antirad missiles using antiRadTypes = 9 now properly home in on active ECM jammers.
 		- Fix NRE when trying to fire laser-guided missiles from a turret with no targeting cam.
 		- Single stage Modular Missiles now activate their engine on launch without needing an AG setup.
+- Competition:
+	- Include last-damaged-by tracking for bullet explosions that damage vessels, not just hits.
 
 v1.6.7.0
 IMPROVEMENTS / FIXES
